# SDVoice

./: .gitmodules  README.md  includes.py  main.py  mainwindow.ui  ros_utils.py
SDVoice_GUI/: login.ui  registro.ui
an4/: an4.html
an4/bwaccumdir/an4_buff_1/: gauden_counts  mixw_counts  tmat_counts
an4/bwaccumdir/an4_buff_2/: gauden_counts  mixw_counts  tmat_counts
an4/etc/: sphinx_train.cfg
an4/logdir/50.cd_hmm_tied/: an4.mk_s2sendump.pocketsphinx
an4/model_architecture/: an4.200.mdef  an4.alltriphones.mdef  an4.tree_questions  an4.untied.mdef
an4/model_parameters/an4.cd_cont_200/: mdef  means  mixture_weights  transition_matrices  variances
an4/model_parameters/an4.cd_cont_200_1/: means  mixture_weights  transition_matrices  variances
an4/model_parameters/an4.cd_cont_200_2/: means  mixture_weights  transition_matrices  variances
an4/model_parameters/an4.cd_cont_200_4/: means  mixture_weights  variances
an4/model_parameters/an4.cd_cont_initial/: means  mixture_weights  transition_matrices  (+1 more)
an4/result/: an4-1-1.match  an4.align  an4.match
dataset/etc/: dataset.dic  dataset.dic~  dataset.phone  dataset.phone~  sphinx_train.cfg  sphinx_train.cfg~
doc/: setup_network.md
rqt_sdvoice/: CMakeLists.txt  package.xml  plugin.xml  setup.py
rqt_sdvoice/resource/: Plugin.ui  default.rviz  login.ui  mainwindow.ui  registro.ui  sdvoice_perspective.perspective
rqt_sdvoice/scripts/: rqt_sdvoice.py
rqt_sdvoice/src/rqt_sdvoice/: automatizacion-87dc9-adminsdk.json  includes.py  sdvoice_module.py  utils_firebase.py
tests/: test.py  test_firebase.py
(+224 files in other folders)
